Update style.css - Added CSS for `middle` class
Added the following property for `middle` class:

    flex: 80%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;

--- a/style.css
+++ b/style.css
@@ -147,3 +147,10 @@ hr {
 .tweets {
     overflow: scroll;
 }
+
+.tweet_post > .post > .tweet-box > .middle {
+    flex: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
